[tool.poetry]
name = "migo"
version = "0.0.1"
description = "Simple async migrations for postgres."
authors = ["Sandeep Jadoonanan <jsanweb@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
asyncpg = "^0.20.1"
aiofiles = "^0.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
migo = 'migo'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
