[tool.poetry]
name = "migo"
version = "0.0.6"
description = "Simple async migrations for postgres."
authors = ["Sandeep Jadoonanan <jsanweb@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
asyncpg = "0.20.1"
aiofiles = "0.4.0"

[tool.poetry.dev-dependencies]
coverage = "5.0"
flake8 = "3.7.9"

[tool.poetry.scripts]
migo = 'migo:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
